yml/kafka-consumer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer
  namespace: practica2-201900907
  labels:
    app: kafka-consumer
spec:
  selector:
    matchLabels:
      app: kafka-consumer
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      hostname: kafka-consumer
      containers:
        - name: grpc-client
          image: villa01/kafka-consumer
