yml/grpc-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: practica2-201900907
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-deployment
  namespace: practica2-201900907
  labels:
    app: grpc-deployment
spec:
  selector:
    matchLabels:
      app: grpc-deployment
  replicas: 1
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: grpc-deployment
    spec:
      hostname: grpc-pod-host
      containers:
        - name: grpc-client
          image: villa01/grpc_client
          ports:
            - containerPort: 3000
        - name: grpc-server
          image: villa01/grpc_server
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: svc-grpc
  namespace: practica2-201900907
  labels:
    app: grpc-deployment
spec:
  type: LoadBalancer
  selector:
    app: grpc-deployment
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
