yml/node-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  namespace: squidgame
  labels:
    app: node-deployment
spec:
  selector:
    matchLabels:
      app: node-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: node-deployment
    spec:
      hostname: node-pod-host
      containers:
        - name: node-api
          image: villa01/node-api
          ports:
            - containerPort: 3000
            
---
apiVersion: v1
kind: Service
metadata:
  name: svc-node
  namespace: squidgame
  labels:
    app: node-deployment
spec:
  selector:
    app: node-deployment
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
